# virtual-assistant-extension

client/: index.html  package-lock.json  package.json  vite.config.content.js
client/public/: manifest.json
client/src/: App.css  App.jsx  ContentApp.jsx  contentMain.jsx  index.css
client/src/components/: ChatBubble.css  ChatBubble.jsx  LightRing.css  LightRing.jsx  ResponseModal.css  ResponseModal.jsx  Settings.css  Settings.jsx  YouTubeOverlay.css  YouTubeOverlay.jsx
client/src/services/: apiClient.js
server/: .gitignore  agent.py  main.py  pyproject.toml  tools.py
