[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]
